--- a/jobs/src/pages/MainPage.css
+++ b/jobs/src/pages/MainPage.css
@@ -1,5 +1,9 @@
-.main-page_wrapper {
-  width: auto;
-  margin: 0;
+.main-page {
+  display: flex;
+  justify-content: center;
   background-color: #f5f5f5;
+}
+.main-page_wrapper {
+  width: 1400px;
+  margin: 0;
 }
